app4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app4
  labels:
    app: app4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app4
  template:
    metadata:
      labels:
        app: app4
    spec:
      containers:
      - name: app4-container
        image: skrgtm/test_sportsmitra:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: app4-service
spec:
  selector:
    app: app4
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
