ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  
spec:
  ingressClassName: nginx
  rules:
    - host: app1.biwaspudasaini.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  number: 80
    - host: app2.biwaspudasaini.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80
    - host: app3.biwaspudasaini.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3-service
                port:
                  number: 80
    - host: app4.biwaspudasaini.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app4-service
                port:
                  number: 80
